Trip Planner > Public Transport

--- a/pt/buses/index.html
+++ b/pt/buses/index.html
@@ -1,22 +1,20 @@
-
 <!doctype html>
 <html class="js" lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Buses | Transnet</title>
+  <title>Buses - Public Transport | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Buses | Transnet">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="Buses - Public Transport | Transnet">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
-  <meta property="og:image" content="/favicon.png">
+  <meta property="og:image" content="/img/favicon.png">
   <meta name="theme-color" content="#009245" />
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="/favicon.png" sizes="any">
-  <link rel="apple-touch-icon" href="/favicon.png">
+  <link rel="icon" href="/img/favicon.png" sizes="any">
+  <link rel="apple-touch-icon" href="/img/favicon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -241,86 +239,28 @@
 
 
 </nav>
-
-  
-
-  <!-- IMPORTANT NOTICE/MASSIVE DISRUPTION -->
- <!-- <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
-    <div class="nsw-global-alert__wrapper">
-      <div class="nsw-global-alert__content">
-        <div class="nsw-global-alert__title">Transnet is officially moving to the new Transnet website from January 1st, 2026</div>
-      </div>
-<div class="nsw-block">
-  <button class="nsw-button nsw-button--dark js-open-dialog-single-cta" aria-haspopup="dialog">Click/tap for more info</button>
-</div>
-
-<div class="nsw-dialog nsw-dialog--single-action js-dialog js-dialog-dismiss" id="single-cta" role="dialog" aria-labelledby="single-cta-title">
-  <div class="nsw-dialog__wrapper">
-    <div class="nsw-dialog__container">
-      <div class="nsw-dialog__top">
-        <div class="nsw-dialog__title">
-          <h2 id="single-cta-title">Transnet is moving to ptft.info</h2>
-        </div>
-        <div class="nsw-dialog__close">
-          <button class="nsw-icon-button js-close-dialog">
-            <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
-            <span class="sr-only">Close</span>
-          </button>
-        </div>
-        </div>
-      <div class="nsw-dialog__content">
-        <p>From January 1st, 2026, Transnet will fully become  Public Transpot for Thornsbury (or PTfT for short)</p>
-          <p>Services from August 1st will no longer be branded as Transnet, as we move forward from the Transnet branding.</p>
-          <p>We (PTfT) will stop updating the Transnet website once the ptft.info website is completed</p>
-          <p>By pressing/clicking ptft.info, you acknowledge that the PTfT website will be still a work in progress, and may contain errors.</p>
-      </div>
-    </div>
-    <div class="nsw-dialog__bottom">
-    <a href="https://ptft.info" class="nsw-button nsw-button--dark">Continue to ptft.info</a>
-    </div>
-  </div>
-</div>
-      </button>
-    </div>
-  </div> -->
-
  
 </head>
 
 <body>
 
- <div class="nsw-m-right-md nsw-m-left-md">
- <nav aria-label="Breadcrumbs" class="nsw-breadcrumbs js-breadcrumbs">
-  <ol>
-      <li>
-        <a href="/">Home</a>
-      </li>
-      <li>
-        <a href="/pt">Travel Info</a>
-      </li>
-      <li>
-        <a href="/pt/buses">Buses</a>
-      </li>
-  </ol>
-</nav> 
-</div>
+</head>
+<body>
 
- <div class="nsw-m-right-md nsw-m-left-md">
-<p>&nbsp; </p>
- </div>
-
-<div class="nsw-hero-banner nsw-hero-banner--dark nsw-hero-banner--wide nsw-hero-banner--lines">
-  <div class="nsw-hero-banner__container">
-    <div class="nsw-hero-banner__wrapper">
-      <div class="nsw-hero-banner__content">
-        <h1>Buses</h1>
-      </div>
-      <div class="nsw-hero-banner__box">
-        <div class="nsw-hero-banner__lines"></div>
-      </div>
-    </div>
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/works.png);">
+  <div class="hero-search">
   </div>
 </div>
+    <div class="nsw-hero-banner nsw-hero-banner--light">
+    <div class="nsw-hero-banner__container">
+      <div class="nsw-hero-banner__wrapper">
+        <div class="nsw-hero-banner__content">
+          <p class="nsw-small">Public Transport</p>
+          <h1>Buses</h1>
+        </div>
+      </div>
+    </div>
+  </div> 
 
 <div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-p-top-sm">
