--- a/pt/index.html
+++ b/pt/index.html
@@ -255,7 +255,7 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <h1>Trip Planner</h1>
+          <h1>Public Transport</h1>
         </div>
       </div>
     </div>
@@ -280,7 +280,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/pt/trains">Suburban Trains</a>
+          <a href="/pt/trains">Metropolitan train network</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disrupions & Network Map</p>
@@ -294,7 +294,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/pt/light-rail">Light Rail</a>
+          <a href="/pt/ferries">Ferries</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disruptions</p>
@@ -331,20 +331,6 @@
       </div>
     </div>
   </div>
-  
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <a href="/pt/metro">Metro</a>
-        </div>
-        <div class="nsw-card__copy">
-          <p>Disruptions & Network Map</p>
-        </div>
-        <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-      </div>
-    </div>
-  </div>    
 
 </div>
   
