--- a/pt/trains/index.html
+++ b/pt/trains/index.html
@@ -256,7 +256,7 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <p class="nsw-small">Trip Planner</p>
+          <p class="nsw-small">Public Transport</p>
           <h1>Metropolitan train network</h1>
         </div>
       </div>
