--- a/pt/regional/network-map.html
+++ b/pt/regional/network-map.html
@@ -4,9 +4,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Network Map - Trains - Public Transport | Transnet</title>
+  <title>Network Map - Regional Express train & coach network - Public Transport | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Network Map - Trains - Public Transport | Transnet">
+  <meta property="og:title" content="Network Map - Regional Express train & coach network - Public Transport | Transnet">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
   <meta property="og:image" content="/img/favicon.png">
