--- a/pt/buses/disruptions.html
+++ b/pt/buses/disruptions.html
@@ -665,7 +665,7 @@
     <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
           <p>Route 551</p>
-          <p class="nsw-small">Lakeswood Circular</p>
+          <p class="nsw-small">Lakeswood Station - Somerton Township</p>
         </div>
       </div>
     </div>
