Images to correlate to correct pages

--- a/pt/ferries/disruptions.html
+++ b/pt/ferries/disruptions.html
@@ -4,9 +4,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Network Map - Trains - Public Transport | Transnet</title>
+  <title>Disruptions - Ferries - Public Transport | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Network Map - Trains - Public Transport | Transnet">
+  <meta property="og:title" content="Disruptions - Ferries - Public Transport | Transnet">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
   <meta property="og:image" content="/img/favicon.png">
@@ -247,7 +247,7 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/net-map.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/ferry.jpg);">
   <div class="hero-search">
   </div>
 </div>
@@ -255,22 +255,61 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <p class="nsw-small">Metropolitan train network</p>
-          <h1>Network Map</h1>
+          <p class="nsw-small">FerryLink network</p>
+          <h1>Disruptions</h1>
         </div>
       </div>
     </div>
   </div> 
+<div class="nsw-m-right-md nsw-m-left-md">
+<div class="nsw-disruption-grid">
 
-<div class="nsw-m-right-md nsw-m-left-md nsw-p-top-md nsw-p-bottom-md">
-<div id="map_embed">
-    <script src="/js/pdfobject.js"></script>
-    <script>PDFObject.embed("/pdf/Thornsbury%20train%20network%20map.pdf", "#map_embed");</script>
-    <style>
-        .pdfobject-container { height: 30rem; }
-    </style>
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>FerryLink North</p>
+          <p class="nsw-small"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>FerryLink East</p>
+          <p class="nsw-small"></p>
+        </div>
+      </div>
+    </div>
+  </div>  
+
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>FerryLink South</p>
+          <p class="nsw-small"></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
+</div>
+</div>
+  
 
   <br>
 <script src="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/js/main.min.js"></script>
@@ -280,6 +319,7 @@
 
 </body>
 </div>
+
 <footer class="nsw-footer">
   <div class="nsw-footer__lower">
     <div class="nsw-container">
