--- a/pt/index.html
+++ b/pt/index.html
@@ -247,7 +247,7 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/works.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/f-set.png);">
   <div class="hero-search">
   </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/pt/ferries">Ferries</a>
+          <a href="/pt/buses">Buses</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disruptions</p>
@@ -302,13 +302,13 @@
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
       </div>
     </div>
-  </div>
+  </div>  
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/pt/buses">Buses</a>
+          <a href="/pt/ferries">Ferries</a>
         </div>
         <div class="nsw-card__copy">
           <p>Disruptions</p>
