--- a/pt/regional/index.html
+++ b/pt/regional/index.html
@@ -248,7 +248,7 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/works.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/regional.jpg);">
   <div class="hero-search">
   </div>
 </div>
