--- a/pt/buses/index.html
+++ b/pt/buses/index.html
@@ -247,7 +247,7 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/works.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/buses.jpg);">
   <div class="hero-search">
   </div>
 </div>
