--- a/pt/ferries/disruptions.html
+++ b/pt/ferries/disruptions.html
@@ -272,7 +272,7 @@
     <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
           <p>FerryLink North</p>
-          <p class="nsw-small"></p>
+          <p class="nsw-small">Port Kimberly, Kyama Beach & Port Creswick</p>
         </div>
       </div>
     </div>
@@ -286,7 +286,7 @@
     <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
           <p>FerryLink East</p>
-          <p class="nsw-small"></p>
+          <p class="nsw-small">Wittingham, Orvine, Broadshore & Port of the Esplanade</p>
         </div>
       </div>
     </div>
@@ -300,7 +300,7 @@
     <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
           <p>FerryLink South</p>
-          <p class="nsw-small"></p>
+          <p class="nsw-small">Tallentyne, Aldington & Port of the Esplanade</p>
         </div>
       </div>
     </div>
