Fares fix & About us

--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Fares - TravelSmart | Transnet</title>
+  <title>About Transnet | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Fares - TravelSmart | Transnet">
+  <meta property="og:title" content="About Transnet | Transnet">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
   <meta property="og:image" content="/img/favicon.png">
@@ -248,7 +248,7 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/travelsmart.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/rer.png);">
   <div class="hero-search">
   </div>
 </div>
@@ -256,81 +256,45 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <p class="nsw-small">TravelSmart</p>
-          <h1>Fares</h1>
+          <h1>About us</h1>
         </div>
       </div>
     </div>
   </div> 
 
- <div class="nsw-m-right-md nsw-m-left-md">
+  <div class="nsw-m-right-md nsw-m-left-md">
     <div class="nsw-p-top-sm">
   </div>
           <div class="main-holder" id="page__general">
             <p>&nbsp;</p>
-<h1>TravelSmart Fares</h1>                    
-  <h2>Daily Fare</h2>
-  <table>
-  <tbody>
-  <tr>
-  <td width="114">Fare type</td>
-  <td width="186">Zone 1 price</td>
-  <td width="120">Zone 2 &amp; Beyond price</td>
-  </tr>
-  <tr>
-  <td width="114">Full</td>
-  <td width="186">$17.50</td>
-  <td width="120">$5.20</td>
-  </tr>
-  <tr>
-  <td width="114">Concession</td>
-  <td width="186">$10.30</td>
-  <td width="120">$3.75</td>
-  </tr>
-  </tbody>
-  </table>
-  
-  <h2>2 Hour Fare</h2>
-  <table>
-  <tbody>
-  <tr>
-  <td width="114">Fare type</td>
-  <td width="186">Zone 1 price</td>
-  <td width="120">Zone 2 &amp; Beyond price</td>
-  </tr><tr>
-  <td width="114">Full</td>
-  <td width="186">$5.30</td>
-  <td width="120">$3.95</td>
-  </tr>
-  <tr>
-  <td width="114">Concession</td>
-  <td width="186">$2.80</td>
-  <td width="120">$1.25</td>
-  </tr>
-  </tbody>
-  </table>
-  
-  <h2>Annual Pass Fare</h2>
-  <table>
-  <tbody>
-  <tr>
-  <td width="114">Fare type</td>
-  <td width="186">Zone 1 price</td>
-  <td width="120">Zone 2 &amp; Beyond price</td>
-  </tr><tr>
-  <td width="114">Full</td>
-  <td width="186">$175</td>
-  <td width="120">$67.28</td>
-  </tr>
-  <tr>
-  <td width="114">Concession</td>
-  <td width="186">$47.80</td>
-  <td width="120">$17.43</td>
-  </tr>
-  </tbody>
-  </table>
-  <p>&nbsp;</p>
-  </div>
+            <div class="nsw-m-right-md nsw-m-left-md">
+              <div class="nsw-p-top-sm">
+                <h1>How Transnet started</h1>
+                <p>In December 1899, Arwyn-James Thornhill &amp; Alexadrea Norman Bury kicked off the revolution of Public Transport by creating the Thornhill &amp; Bury Railway Co. (TBRC for short), they were the forefront <br>
+                of the railway network as they unified the unoccupied lines of family owned rail services for passenger service. Arywn and Alexadrea both we're proud of what they did as they brought a railway <br>
+                network that was divided for years, back together.</p>
+                <p>The evolution of the railway network ultimatly kicked off in September of 1901 as the Fairmead Line was the first electrified line that TBRC introduced to the country, the first train Z set 1, was the first to<br>
+                roll out of the production line and straight into passenger service. Day one was a success with everyone on the line, and the total passengers at 8,924 (info recored from the Thornsbury Government Archives 1900-1950).</p>
+                It was revolutionary and never seen before in the network and from that day forward, the railway network had continuously evolved and had set course of it's future, forever.</p>
+                </div>
+            </div>
+            <div class="nsw-m-right-md nsw-m-left-md">
+              <div class="nsw-p-top-sm">
+                <h1>How Transnet came along</h1>
+                <p>In 1984, network conflicts were arising with family owned companies and corprate owned companies, as a counter measure, the government had to step in, with TFTN (Transport for Thornsbury Network). The government <br>
+                had created a solution by creating Transnet (Transportation Network of Thornsbury), the transport operator for Thornsbury, it's establisment has also broken the rail network into two, with the Northern and Eastern sides being <br>
+                controlled by Transnet, while Southern and Western were controlled by TFTN. However, in June of 2002, TFTN had broken it's boundary restrictions by entering a test train onto the Southmead Line. At 12:43am, the test train had<br>
+                set alight, it took emergency crews and a Transnet locomotive to haul the wreckage 7 hours to clear the line, the next day, a national enquiry was held for the proprietaral holder of TFTN (MotionRail) for the actions and misconduct<br>
+                <p>After the enquiry was held, Transnet was appointed primary rail operator and transport company for Thornsbury under the provision of the Department of Public Transport</p>
+            </div>
+          </div>
+
+        <div class="nsw-m-right-md nsw-m-left-md">
+          <div class="nsw-p-top-sm">
+            <h1>What's the future like for Transnet?</h1>
+            <p>Here at Transnet, we're committed to bringing better transport, including improved train services, more bus routes and improved tram services. We are commited to meeting our Future Proof <br>
+            plan before 2030. Some of our plans are currently in action and we are committed to getting all our plans completed before 2030.</p>
+        </div>
 
 </div>
 
