--- a/travelsmart/fares.html
+++ b/travelsmart/fares.html
@@ -248,7 +248,7 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/travelsmart.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/trav-sm.png);">
   <div class="hero-search">
   </div>
 </div>
@@ -267,8 +267,7 @@
     <div class="nsw-p-top-sm">
   </div>
           <div class="main-holder" id="page__general">
-            <p>&nbsp;</p>
-<h1>TravelSmart Fares</h1>                    
+            <p>&nbsp;</p>                 
   <h2>Daily Fare</h2>
   <table>
   <tbody>
