--- a/news-and-publications/index.html
+++ b/news-and-publications/index.html
@@ -1,26 +1,24 @@
-
-
 <!doctype html>
 <html class="js" lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>TravelSmart - Fares & Tickets | Public Transport for Thornsbury (PTfT)</title>
+  <title>News and publications | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="TravelSmart - Fares & Tickets | Public Transport for Thornsbury (PTfT)">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="News and publications | Transnet">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
-  <meta property="og:image" content="/favicon.png">
+  <meta property="og:image" content="/img/favicon.png">
+  <meta name="theme-color" content="#009245" />
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="/favicon.png" sizes="any">
-  <link rel="apple-touch-icon" href="/favicon.png">
+  <link rel="icon" href="/img/favicon.png" sizes="any">
+  <link rel="apple-touch-icon" href="/img/favicon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone" rel="stylesheet">
   <link rel="stylesheet" href="/css/docs.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css">
@@ -39,7 +37,7 @@
       a.appendChild(r);
     })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
   </script>
-  <script src="./cookie-consent-config.js"></script>
+  <script src="/cookie-consent-config.js"></script>
 </head>
 
 <nav class="nsw-skip" aria-label="Skip to links">
@@ -53,14 +51,15 @@
       <div class="nsw-header__main">
         <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/img/PTfT-c.svg" alt="PTfT Logo" width="250px"/>
+              <img src="/img/TN-w.svg" alt="Transnet Logo" width="250px"/>
             </a>
-        </div>
+        </div>       
       </div>
+
+      
       <div class="nsw-header__menu">
         <button type="button" class="js-open-nav" aria-expanded="false" aria-controls="main-nav">
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">menu</span>
-          <span><span class="sr-only">Open</span> Menu</span>
         </button>
       </div>
     </div>
@@ -76,8 +75,8 @@
   </div>
   <ul class="nsw-main-nav__list">
     <li>
-      <a href="https://designsystem.nsw.gov.au/index.html#about-dpc">
-        <span>Travel Info</span>
+      <a href="/pt">
+        <span>Public Transport</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -95,54 +94,36 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="./travel-info/">
-            <span>Travel Info</span>
+          <a href="/pt/">
+            <span>Public Transport</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
 
-        <div class="nsw-main-nav__description"></div>
+        <div class="nsw-main-nav__description">Your one stop shop for all your trip planning needs, find information about maps, timetables, disruptions and more.</div>
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="./travel-info/trains">
-              <span>Suburban & Regional Trains</span>
-              <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
-            </a>
-            <div class="nsw-main-nav__sub-nav" id="sub-nav-1138" role="region" aria-label="Level 2 Submenu">
-              <div class="nsw-main-nav__header">
-                <button class="nsw-icon-button nsw-icon-button--flex js-close-sub-nav" type="button" aria-expanded="true" aria-controls="sub-nav-1138">
-                  <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_left</span>
-                  <span>Back<span class="sr-only"> to previous menu</span></span> 
-                </button>
-
-                <button class="nsw-icon-button js-close-nav" type="button" aria-expanded="true">
-                  <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
-                  <span class="sr-only">Close Menu</span>
-                </button>
-              </div>
-
-          <li>
-            <a href="./travel-info/trams">
-              <span>Trams</span>
+            <a href="/pt/trains">
+              <span>Trains</span>
             </a>
           </li>
 
           <li>
-            <a href="./travel-info/buses">
+            <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="./travel-info/coaches">
-              <span>Coaches</span>
+            <a href="/pt/ferries">
+              <span>Ferries</span>
             </a>
           </li>
 
           <li>
-            <a href="./travel-info/metro">
-              <span>Metro</span>
+            <a href="/pt/regional">
+              <span>Regional Express (Trains & Coaches)</span>
             </a>
           </li>
 
@@ -150,8 +131,8 @@
       </div>
     </li>
     <li>
-      <a href="https://designsystem.nsw.gov.au/index.html#updates">
-        <span>Fares & tickets</span>
+      <a href="/travelsmart">
+        <span>TravelSmart</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -169,7 +150,7 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="https://designsystem.nsw.gov.au/index.html#updates">
+          <a href="/travelsmart">
             <span>Fares & tickets</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
@@ -179,26 +160,26 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>TravelSmart</span>
+            <a href="/travelsmart/fares">
+              <span>Fares</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>TicketNet</span>
+            <a href="/travelsmart/zones">
+              <span>Zones</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>TravelPass</span>
+            <a href="/travelsmart/travelpass">
+              <span>PTfT TravelPass (for interstate travel)</span>
             </a>
           </li>
         </ul>
       </div>
     </li>
     <li>
-     <!-- <a href="https://designsystem.nsw.gov.au/index.html#publications">
-        <span>Publications</span>
+<a href="/news-and-publications">
+        <span>News and publications</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -216,8 +197,8 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="https://designsystem.nsw.gov.au/index.html#publications">
-            <span>Publications</span>
+          <a href="/news-and-publications">
+            <span>News and publications</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
@@ -226,181 +207,117 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/news">
+              <span>News</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/projects">
+              <span>Projects</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/whats-on">
+              <span>Whats On! (Events)</span>
             </a>
           </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>  
-        </ul> -->
+        </ul>
       </div>
     </li>
     <li>
 
     <li>
-      <a href="./about">
+      <a href="/about">
         <span>About us</span>
       </a>    </li>
 
       <li>
-      <a href="./contact">
+      <a href="/contact">
         <span>Contact us</span>
       </a>    </li>
   </ul>
 
 
 </nav>
-
-  
-
-  <!-- IMPORTANT NOTICE/MASSIVE DISRUPTION -->
- <!-- <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
-    <div class="nsw-global-alert__wrapper">
-      <div class="nsw-global-alert__content">
-        <div class="nsw-global-alert__title">Transnet is officially moving to the new Public Transport for Thornsbury website from January 1st, 2026</div>
-      </div>
-<div class="nsw-block">
-  <button class="nsw-button nsw-button--dark js-open-dialog-single-cta" aria-haspopup="dialog">Click/tap for more info</button>
-</div>
-
-<div class="nsw-dialog nsw-dialog--single-action js-dialog js-dialog-dismiss" id="single-cta" role="dialog" aria-labelledby="single-cta-title">
-  <div class="nsw-dialog__wrapper">
-    <div class="nsw-dialog__container">
-      <div class="nsw-dialog__top">
-        <div class="nsw-dialog__title">
-          <h2 id="single-cta-title">Transnet is moving to ptft.info</h2>
-        </div>
-        <div class="nsw-dialog__close">
-          <button class="nsw-icon-button js-close-dialog">
-            <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
-            <span class="sr-only">Close</span>
-          </button>
-        </div>
-        </div>
-      <div class="nsw-dialog__content">
-        <p>From January 1st, 2026, Transnet will fully become  Public Transpot for Thornsbury (or PTfT for short)</p>
-          <p>Services from August 1st will no longer be branded as Transnet, as we move forward from the Transnet branding.</p>
-          <p>We (PTfT) will stop updating the Transnet website once the ptft.info website is completed</p>
-          <p>By pressing/clicking ptft.info, you acknowledge that the PTfT website will be still a work in progress, and may contain errors.</p>
-      </div>
-    </div>
-    <div class="nsw-dialog__bottom">
-    <a href="https://ptft.info" class="nsw-button nsw-button--dark">Continue to ptft.info</a>
-    </div>
-  </div>
-</div>
-      </button>
-    </div>
-  </div> -->
-
  
 </head>
 
 <body>
-  
-<div class="nsw-hero-banner nsw-hero-banner--dark nsw-hero-banner--wide nsw-hero-banner--lines">
-  <div class="nsw-hero-banner__container">
-    <div class="nsw-hero-banner__wrapper">
-      <div class="nsw-hero-banner__content">
-        <h1>TravelSmart Fares</h1>
-        <p class="nsw-intro">Effective from August 11th</p>
+
+</head>
+<body>
+
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/f-set.png);">
+  <div class="hero-search">
+  </div>
+</div>
+    <div class="nsw-hero-banner nsw-hero-banner--light">
+    <div class="nsw-hero-banner__container">
+      <div class="nsw-hero-banner__wrapper">
+        <div class="nsw-hero-banner__content">
+          <h1>News and publications</h1>
+        </div>
       </div>
-      <div class="nsw-hero-banner__box">
-        <div class="nsw-hero-banner__lines"></div>
+    </div>
+  </div> 
+
+ <div class="nsw-m-right-md nsw-m-left-md">
+<p>&nbsp; </p>
+ </div>
+
+<div class="nsw-m-right-md nsw-m-left-md">
+<div class="nsw-p-top-sm">
+</div>
+
+</div>
+
+<div class="nsw-grid">
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <a href="/news-and-publications/news">Transnet News</a>
+        </div>
+        <div class="nsw-card__copy">
+          <p>News about Transnet, it's proprietors and various other things around Transnet</p>
+        </div>
+        <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
       </div>
     </div>
   </div>
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <a href="/news-and-publications/projects">Projects</a>
+        </div>
+        <div class="nsw-card__copy">
+          <p>Projects that Transnet are working on</p>
+        </div>
+        <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
+      </div>
+    </div>
+  </div>  
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <a href="/news-and-publications/whats-on">Whats On! (Events)</a>
+        </div>
+        <div class="nsw-card__copy">
+          <p>For all the events in Thornsbury, you shouldn't miss!</p>
+        </div>
+        <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
+      </div>
+    </div>
+  </div>  
+
 </div>
-
-  <div class="nsw-m-right-md nsw-m-left-md">
-    <div class="nsw-p-top-sm">
-  </div>
-          <div class="main-holder" id="page__general">
-            <p>&nbsp;</p>                    
-  <h2>Daily Fare cap</h2>
-  <table>
-  <tbody>
-  <tr>
-  <td width="114">Fare type</td>
-  <td width="186">Zone 1 price</td>
-  <td width="120">Zone 2 &amp; Beyond price</td>
-  </tr>
-  <tr>
-  <td width="114">Full</td>
-  <td width="186">$17.50</td>
-  <td width="120">$5.20</td>
-  </tr>
-  <tr>
-  <td width="114">Concession</td>
-  <td width="186">$10.30</td>
-  <td width="120">$3.75</td>
-  </tr>
-  </tbody>
-  </table>
   
-  <h2>2 Hour Fare</h2>
-  <table>
-  <tbody>
-  <tr>
-  <td width="114">Fare type</td>
-  <td width="186">Zone 1 price</td>
-  <td width="120">Zone 2 &amp; Beyond price</td>
-  </tr><tr>
-  <td width="114">Full</td>
-  <td width="186">$5.30</td>
-  <td width="120">$3.95</td>
-  </tr>
-  <tr>
-  <td width="114">Concession</td>
-  <td width="186">$2.80</td>
-  <td width="120">$1.25</td>
-  </tr>
-  </tbody>
-  </table>
- </div> 
 
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p> 
-
+  <br>
 <script src="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/js/main.min.js"></script>
 <script>window.NSW.initSite()</script>
 
@@ -415,10 +332,10 @@
       <hr>
       <div class="nsw-footer__links">
       <ul>
-        <li><a href="#">Disclaimer</a></li>
+        <li><a href="/disclaimer">Disclaimer</a></li>
       </ul>
       <div class="nsw-footer__social">
-        <a class="nsw-icon-button" href="https://x.com/PTfT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
+        <a class="nsw-icon-button" href="https://x.com/TransnetPT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
           <svg role="img" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>X (formerly Twitter)</title>
             <path d="M18.6348 13.5498L30.2914 0H27.5292L17.4078 11.7651L9.32385 0H0L12.2245 17.7909L0 32H2.76239L13.4508 19.5756L21.9881 32H31.3119L18.6342 13.5498H18.6348ZM14.8514 17.9477L13.6128 16.1761L3.75772 2.07949H8.00059L15.9537 13.4559L17.1923 15.2275L27.5305 30.0151H23.2876L14.8514 17.9484V17.9477Z" fill="white"/>
@@ -428,7 +345,7 @@
       </div>
       </div>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © 2025 - Public Transport for Thornsbury is an umbrella agency for the Department of Transport & Agriculture</div>
+        <div class="nsw-footer__copyright">Copyright © 2025 - Transnet is an umbrella agency for the Department of Transport & Agriculture</div>
         <div class="nsw-footer__built"><img src="/img/TBGL.svg" alt="Thornsbury Government Logo" style="height: 100%;"></div>
       </div>
     </div>
