--- a/travelsmart/index.html
+++ b/travelsmart/index.html
@@ -247,7 +247,7 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/f-set.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/trav-sm.png);">
   <div class="hero-search">
   </div>
 </div>
