--- a/404.html
+++ b/404.html
@@ -1,25 +1,25 @@
-
 <!doctype html>
 <html class="js" lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Page Not Found Transport for Thornsbury (PTfT)</title>
-  <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Page Not Found | Public Transport for Thornsbury (PTfT)">
+  <title>Page Not Found | Transnet</title>
+  <meta name="description" content="Your way, everyday.">
+  <meta property="og:title" content="Page Not Found | Transnet">
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
-  <meta name="og:description" content="Your local transport operator for Thornsbury">
-  <meta property="og:image" content="/favicon.png">
+  <meta name="og:description" content="Your way, everyday.">
+  <meta property="og:image" content="/img/favicon.png">
+  <meta name="theme-color" content="#009245" />
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="/favicon.png" sizes="any">
-  <link rel="apple-touch-icon" href="/favicon.png">
+  <link rel="icon" href="/img/favicon.png" sizes="any">
+  <link rel="apple-touch-icon" href="/img/favicon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone" rel="stylesheet">
   <link rel="stylesheet" href="/css/docs.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css">
@@ -42,9 +42,11 @@
 </head>
 
 <nav class="nsw-skip" aria-label="Skip to links">
-  <a href="#main-nav"><span>Skip to navigation</span></a>
+  <a href="#"><span>Skip to navigation</span></a>
   <a href="#"><span>Skip to content</span></a>
 </nav>
+
+
 
 <header class="nsw-header">
   <div class="nsw-header__container">
@@ -52,14 +54,15 @@
       <div class="nsw-header__main">
         <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/img/PTfT-c.svg" alt="PTfT Logo" width="250px"/>
+              <img src="/img/TN-w.svg" alt="Transnet Logo" width="250px"/>
             </a>
-        </div>
+        </div>       
       </div>
+
+      
       <div class="nsw-header__menu">
         <button type="button" class="js-open-nav" aria-expanded="false" aria-controls="main-nav">
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">menu</span>
-          <span><span class="sr-only">Open</span> Menu</span>
         </button>
       </div>
     </div>
@@ -75,8 +78,8 @@
   </div>
   <ul class="nsw-main-nav__list">
     <li>
-      <a href="https://designsystem.nsw.gov.au/index.html#about-dpc">
-        <span>Travel Info</span>
+      <a href="/pt">
+        <span>Public Transport</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -94,54 +97,36 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/travel-info/">
-            <span>Travel Info</span>
+          <a href="/pt/">
+            <span>Public Transport</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
 
-        <div class="nsw-main-nav__description"></div>
+        <div class="nsw-main-nav__description">Your one stop shop for all your trip planning needs, find information about maps, timetables, disruptions and more.</div>
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/travel-info/trains">
-              <span>Suburban & Regional Trains</span>
-              <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
-            </a>
-            <div class="nsw-main-nav__sub-nav" id="sub-nav-1138" role="region" aria-label="Level 2 Submenu">
-              <div class="nsw-main-nav__header">
-                <button class="nsw-icon-button nsw-icon-button--flex js-close-sub-nav" type="button" aria-expanded="true" aria-controls="sub-nav-1138">
-                  <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_left</span>
-                  <span>Back<span class="sr-only"> to previous menu</span></span> 
-                </button>
-
-                <button class="nsw-icon-button js-close-nav" type="button" aria-expanded="true">
-                  <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
-                  <span class="sr-only">Close Menu</span>
-                </button>
-              </div>
-
-          <li>
-            <a href="/travel-info/trams">
-              <span>Trams</span>
+            <a href="/pt/trains">
+              <span>Trains</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/buses">
+            <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/coaches">
-              <span>Coaches</span>
+            <a href="/pt/ferries">
+              <span>Ferries</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/metro">
-              <span>Metro</span>
+            <a href="/pt/regional">
+              <span>Regional Express (Trains & Coaches)</span>
             </a>
           </li>
 
@@ -149,8 +134,8 @@
       </div>
     </li>
     <li>
-      <a href="/fares">
-        <span>Fares & tickets</span>
+      <a href="/travelsmart">
+        <span>TravelSmart</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -168,7 +153,7 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/fares">
+          <a href="/travelsmart">
             <span>Fares & tickets</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
@@ -178,26 +163,26 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/fares/travelsmart">
-              <span>TravelSmart</span>
+            <a href="/travelsmart/fares">
+              <span>Fares</span>
             </a>
           </li>
           <li>
-            <a href="/fares/ticketnet">
-              <span>TicketNet</span>
+            <a href="/travelsmart/zones">
+              <span>Zones</span>
             </a>
           </li>
           <li>
-            <a href="/fares/travelpass">
-              <span>TravelPass</span>
+            <a href="/travelsmart/travelpass">
+              <span>PTfT TravelPass (for interstate travel)</span>
             </a>
           </li>
         </ul>
       </div>
     </li>
     <li>
-     <!-- <a href="https://designsystem.nsw.gov.au/index.html#publications">
-        <span>Publications</span>
+<a href="/news-and-publications">
+        <span>News and publications</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -215,8 +200,8 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="https://designsystem.nsw.gov.au/index.html#publications">
-            <span>Publications</span>
+          <a href="/news-and-publications">
+            <span>News and publications</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
@@ -225,51 +210,21 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/news">
+              <span>News</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/projects">
+              <span>Projects</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/whats-on">
+              <span>Whats On! (Events)</span>
             </a>
           </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>  
-        </ul> -->
+        </ul>
       </div>
     </li>
     <li>
@@ -345,9 +300,10 @@
           <div class="nsw-hero-banner__list">
             <ul>
               <li><a href=""> Home</a></li>
-              <li><a href="/map">Train network map</a></li>
-              <li><a href="/fares" target="_blank" rel="noopener noreferrer">Fares</a></li>
-              <li><a href="/about" target="_blank" rel="noopener noreferrer">About us</a></li>
+              <li><a href="/pt">Public Transport</a></li>
+              <li><a href="/travelsmart" target="_blank" rel="noopener noreferrer">TravelSmart</a></li>
+              <li><a href="/news-and-publications" target="_blank" rel="noopener noreferrer">News and publications</a></li>
+              <li><a href="/about" target="_blank" rel="noopener noreferrer">About Transnet</a></li>
             </ul>
         </div>
         <div class="nsw-hero-banner__box">
@@ -372,7 +328,7 @@
         <li><a href="/disclaimer">Disclaimer</a></li>
       </ul>
       <div class="nsw-footer__social">
-        <a class="nsw-icon-button" href="https://x.com/PTfT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
+        <a class="nsw-icon-button" href="https://x.com/TransnetPT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
           <svg role="img" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>X (formerly Twitter)</title>
             <path d="M18.6348 13.5498L30.2914 0H27.5292L17.4078 11.7651L9.32385 0H0L12.2245 17.7909L0 32H2.76239L13.4508 19.5756L21.9881 32H31.3119L18.6342 13.5498H18.6348ZM14.8514 17.9477L13.6128 16.1761L3.75772 2.07949H8.00059L15.9537 13.4559L17.1923 15.2275L27.5305 30.0151H23.2876L14.8514 17.9484V17.9477Z" fill="white"/>
@@ -382,8 +338,8 @@
       </div>
       </div>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © 2025 - Public Transport for Thornsbury is an umbrella agency for the Department of Transport & Agriculture</div>
-        <div class="nsw-footer__built"><img src="./img/TBGL.svg" alt="Thornsbury Government Logo" style="height: 100%;"></div>
+        <div class="nsw-footer__copyright">Copyright © 2025 - Transnet is an umbrella agency for the Department of Transport & Agriculture</div>
+        <div class="nsw-footer__built"><img src="/img/TBGL.svg" alt="Thornsbury Government Logo" style="height: 100%;"></div>
       </div>
     </div>
   </div>
