--- a/news-and-publications/projects/index.html
+++ b/news-and-publications/projects/index.html
@@ -288,7 +288,7 @@
       <div class="nsw-card__content">
         <div class="nsw-card__title">
           <p class="nsw-small">25 August 2025</p>
-          <a href="/news-and-publications/projects/inner-northwest-upgrades">Regional Express Revival</a>
+          <a href="/news-and-publications/projects/inner-northwest-upgrades">Upgrading the Inner Northwest</a>
         </div>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
       </div>
