--- a/about.html
+++ b/about.html
@@ -248,7 +248,7 @@
 </head>
 <body>
 
-<div class="nsw-section nsw-section--image" style="background-image: url(/img/rer.png);">
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/about.png);">
   <div class="hero-search">
   </div>
 </div>
