Fares & Tickets > TravelSmart

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
         <div class="nsw-main-nav__title">
           <a href="/travelsmart">
-            <span>Fares & tickets</span>
+            <span>TravelSmart</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
